# Flash-VStream

./: README.md  pyproject.toml
Flash-VStream-LLaVA/: README.md
Flash-VStream-LLaVA/flash_vstream/: __init__.py  constants.py  conversation.py  mm_utils.py  utils.py
Flash-VStream-LLaVA/flash_vstream/eval_video/: eval_activitynet_qa.py
Flash-VStream-LLaVA/flash_vstream/model/: __init__.py  builder.py
Flash-VStream-LLaVA/flash_vstream/serve/: cli_video_stream.py
Flash-VStream-LLaVA/scripts/: realtime_cli.sh  zero1.json
Flash-VStream-LLaVA/vstream.egg-info/: SOURCES.txt
Flash-VStream-Qwen/: README.md  cli_server_2gpu.py  eval_activitynet_qa.py  eval_any_dataset.py  finetune_flash.py  inference_mcq_vqa.py  setup.sh
Flash-VStream-Qwen/models/: __init__.py  compress_functions.py  flash_memory_constants.py  vstream_qwen2vl_model.py  vstream_qwen2vl_processor.py  vstream_qwen2vl_realtime.py
Flash-VStream-Qwen/qwen_vl_utils/: vision_process.py
Flash-VStream-Qwen/scripts/: cli_server_2gpu.sh  eval.sh  extract_frames.py  train_and_eval.sh
flash_vstream/: conversation.py  mm_utils.py  utils.py
flash_vstream/eval_video/: eval_activitynet_qa.py  eval_any_dataset_features.py  model_msvd_qa.py  model_msvd_qa_featuresloader.py
flash_vstream/model/: compress_functions.py  vstream_arch.py
flash_vstream/train/: llama_xformers_attn_monkey_patch.py  train.py  train_mem.py  train_xformers.py
scripts/: eval.sh  merge_lora_weights.py  train_and_eval.sh  zero0.json
vstream.egg-info/: PKG-INFO  requires.txt  top_level.txt
(+12 files in other folders)
