[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vstream"
version = "1.0"
description = "Flash-VStream"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "numpy",
    "tokenizers>=0.12.1",
    "torch==2.0.1", 
    "torchvision==0.15.2", 
    "wandb",
    "tensorboard",
    "tensorboardX",
    "httpx==0.23.0",
    "deepspeed==0.9.5",
    "peft==0.4.0",
    "transformers==4.31.0",
    "accelerate==0.21.0",
    "bitsandbytes==0.41.0",
    "scikit-learn==1.2.2",
    "sentencepiece==0.1.99",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13",
    "decord",
    "openai==0.28.0",
]

[project.urls]
"Homepage" = "https://github.com/zhang9302002/Flash-VStream"
"Bug Tracker" = "https://github.com/zhang9302002/Flash-VStream/issues"

[tool.setuptools.packages.find]
exclude = ["checkpoints*", "data*", "docs", "scripts*"]

[tool.wheel]
exclude = ["checkpoints*", "data*", "docs", "scripts*"]